Fix graph size on smaller widths

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -72,7 +72,7 @@ p {
   height: 100%;
   row-gap: $content-spacing;
   column-gap: $content-spacing;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr minmax(10em, 75%);
   grid-template-rows: 1fr;
   .grid-item {
     display: flex;
@@ -98,7 +98,7 @@ p {
   margin: 0.25em 0;
 }
 
-@media screen and (max-width: 50em) {
+@media screen and (max-width: 60em) {
   html body {
     #grid {
       grid-template-columns: 100%;
